test/nexj/invalidbase/soadefs/TypeWithFaultBase.soadef
<SOADefinition name="nexj:test:TypeWithFaultBase">
   <Types>
      <Type name="Type1" bases="Fault1">
         <Attributes>
            <Attribute name="data" type="string"/>
         </Attributes>
      </Type>
   </Types>
   <Faults>
      <Fault name="Fault1">
         <Attributes>
            <Attribute name="data2" type="integer"/>
         </Attributes>
      </Fault>
   </Faults>
   <Bindings>
      <Binding protocol="trpc"/>
   </Bindings>
</SOADefinition>
